# stackoverflow-data-analytics-design

./: .python-version  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: consuming-data.py  ingesting-data.py  processing-data.py
app/infrastructure/: event-bridge.yaml  sns-topic.yaml  stepfunction.json
