[tool.poetry]
name = "streek-ai"
version = "0.1.0"
description = "Backend to interact with the database using FAST API."
authors = ["harshitsinghai77 <harshitsinghai77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
boto3 = "^1.26.133"
pyspark = "^3.4.0"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
autoflake = "^1.4"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
